Update pages to mention git instead of svn
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1551858 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/contributing.page
+++ b/src/main/webapp/index/community/contributing.page
@@ -40,7 +40,7 @@ h2. Working on the code
 
 Grab the [Source] and create a project in your IDE. e.g. if you are using Eclipse the following should do the trick...
 {code}
-svn co https://svn.apache.org/repos/asf/karaf/trunk karaf
+git clone https://git-wip-us.apache.org/repos/asf/karaf.git karaf
 cd karaf
 mvn eclipse:eclipse
 {code}
@@ -64,7 +64,7 @@ diff -u Main.java.orig Main.java >> patchfile.txt
 {code}
 or
 {code}
-svn diff Main.java >> patchfile.txt
+git diff Main.java >> patchfile.txt
 {code}
 
 h2. Submitting patches
