--- a/src/main/webapp/index/developers/source.page
+++ b/src/main/webapp/index/developers/source.page
@@ -4,56 +4,39 @@ page_version: 4
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
-h2. Web Browsing of SVN
+h2. Web Browsing of Git
 
-To browse  via the web use the ViewVC interface:
-
-{panel}
-http://svn.apache.org/viewvc/karaf/trunk/
-{panel}
-
-Or to browse the source tree directly:
+To browse via the Web, you can use the main Git site:
 
 {panel}
-https://svn.apache.org/repos/asf/karaf/trunk/
+https://git-wip-us.apache.org/repos/asf?p=karaf.git;a=summary
 {panel}
 
-h2. Checking out from SVN
+h2. Cloning from Git
 
 {code}
-svn co https://svn.apache.org/repos/asf/karaf/trunk karaf
+git clone https://git-wip-us.apache.org/repos/asf/karaf.git karaf
 {code}
 
-Only project developers can commit to the SVN tree via this method.  SSH must be installed on your client machine. Enter your site password when prompted.
-
-h3. SVN and Eclipse
-
-See [this article|http://www-128.ibm.com/developerworks/library/os-ecl-subversion/index.html] for getting started guides. Basically you need [subclipse|http://subclipse.tigris.org]
+Only project developers can commit to the git repository.
 
 h3. Branches
 
-We use the trunk for the next main release; then we use a branch for any bug fixes on the previous major release. You can look at all branches here
+We use the master for the next main release; then we use a branch for any bug fixes on the previous major release. You can look at all branches here
 
-https://svn.apache.org/repos/asf/karaf/branches/
+{code}
+git branch -a
+{code}
+
+And switch to a given branch:
+
+{code}
+git checkout branch_name
+{code}
 
 h3. Sandbox
 
-We have added a sandbox to host camel components that can be fostered into a quality and usage demand before moving into the trunk.
-
-https://svn.apache.org/repos/asf/karaf/sandbox/
-
-h2. Using GIT-SVN
-
-A git-svn mirror is available.
-
-{code}
-PROJECT_NAME="karaf"
-git clone git://git.apache.org/"$PROJECT_NAME"
-cd "$PROJECT_NAME"/.git; wget http://git.apache.org/authors.txt; cd ..
-git config svn.authorsfile ".git/authors.txt"
-git svn init --prefix=origin/ --tags=tags --trunk=trunk --branches=branches https://svn.apache.org/repos/asf/"$PROJECT_NAME"
-git svn rebase
-{code}
+Git allows you to create local branches that you submit as pull request on github for instance.
 
 h2. Building the code
 
