--- a/src/main/webapp/index/subprojects/eik/eik-source.page
+++ b/src/main/webapp/index/subprojects/eik/eik-source.page
@@ -4,46 +4,34 @@ page_version: 2
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
-h2. Web Browsing of SVN
+h2. Web Browsing of Git
 
-To browse  via the web use the ViewVC interface:
-
-{panel}
-http://svn.apache.org/viewvc/karaf/eik/trunk/
-{panel}
-
-Or to browse the source tree directly:
+To browse via the Web, you can use the main Git site:
 
 {panel}
-https://svn.apache.org/repos/asf/karaf/eik/trunk/
+https://git-wip-us.apache.org/repos/asf?p=karaf-eik.git;a=summary
 {panel}
 
-h2. Checking out from SVN
+h2. Cloning from Git
 
 {code}
-svn co https://svn.apache.org/repos/asf/karaf/eik/trunk eik
+git clone https://git-wip-us.apache.org/repos/asf/karaf-eik.git cave
 {code}
 
-Only project developers can commit to the SVN tree via this method.  SSH must be installed on your client machine. Enter your site password when prompted.
-
-h3. SVN and Eclipse
-
-See [this article|http://www-128.ibm.com/developerworks/library/os-ecl-subversion/index.html] for getting started guides. Basically you need [subclipse|http://subclipse.tigris.org]
+Only project developers can commit to the git repository.
 
 h3. Branches
 
-We use the trunk for the next main release; then we use a branch for any bug fixes on the previous major release. You can look at all branches here
-
-https://svn.apache.org/repos/asf/karaf/eik/branches/
-
-h2. Using GIT-SVN
+We use the master for the next main release; then we use a branch for any bug fixes on the previous major release. You can look at all branches here
 
 {code}
-git svn init --prefix=origin/ --trunk=trunk --branches=branches --tags=tags https://svn.apache.org/repos/asf/karaf/eik eik
-git svn fetch --log-window-size 20000
-cd eik/.git; wget http://git.apache.org/authors.txt; cd ..
-git config svn.authorsfile ".git/authors.txt"
-git svn rebase
+git branch -a
+{code}
+
+And switch to a given branch:
+
+{code}
+git checkout branch_name
 {code}
 
 h2. Building the code
