Fix git URL in the release guide
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1551922 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/developers/release-guide.page
+++ b/src/main/webapp/index/developers/release-guide.page
@@ -109,7 +109,7 @@ h3. Staging the Release Candidate
 
 # Grab the latest source
 {code}
-git clone https://svn.apache.org/repos/asf/karaf.git
+git clone https://git-wip-us.apache.org/repos/asf/karaf.git
 {code}
 # Prepare your POMs for release:
 ## make sure there is no snapshots in the POMs to be released
