--- a/src/main/webapp/index/developers/release-guide.page
+++ b/src/main/webapp/index/developers/release-guide.page
@@ -8,13 +8,13 @@ h1. How to create and announce a Karaf release.
 
 h3. Required tools, practices and resources
 
-* Use Maven 2.0.11 or greater.
-* JDK 1.5 if version < 2.3.0, JDK 1.6 otherwise.
+* Use Maven 3.0.4 or greater.
+* JDK 1.5 if version < 2.3.0, JDK 1.7 otherwise.
 * Install [princexml|http://www.princexml.com/] 7.1 for manual generation.
 * Each and every release must be [SIGNED|http://www.apache.org/dev/release-signing.html]
 * Your public key should also be cross-signed by other Apache committers (not required, but suggested)
 * Make sure you have all Apache servers defined in your [settings.xml|http://maven.apache.org/developers/committer-settings.html]
-* Subversion client 1.7.8 or above.
+* Git client 1.8 or greater
 
 h3. Versioning
 
