[KARAF-378] Apache Karaf 3.0.0 Release. Update website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1553315 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,5 +1,5 @@
 ---
-title: Karaf 2.3.3
+title: Karaf 3.0.0 
 page_version: 21
 page_creator: gnodet
 page_modifier: jbonofre
@@ -15,7 +15,7 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 3.0.0.RC1|index/community/download.html#Karaf3.0.0.RC1]*
+*[Download Karaf 3.0.0|index/community/download.html#Karaf3.0.0]*
 *[Download Karaf 2.3.3|index/community/download.html#Karaf2.3.3]*
 [!/images/karaf-box.png|width=256!|index/community/download.html#Karaf2.3.3]
 {center}
@@ -60,7 +60,7 @@ new TWTR.Widget({
 
 
 h2. News
-
+{include:news-2013-12-18}
 {include:news-2013-12-18}
 {include:news-2013-10-14}
 {include:news-2013-09-20}
@@ -73,4 +73,3 @@ h2. News
 {include:news-2013-02-17}
 {include:news-2012-12-21}
 {include:news-2012-12-06}
-{include:news-2012-10-15}
