--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -67,6 +67,7 @@ h2. Addons
 
 h2. Books
 
+* [Apache Karaf Cookbook (Currently in progress!)|http://www.packtpub.com]
 * [Learning Apache Karaf|http://www.packtpub.com/learning-apache-karaf/book]
 * [OSGi Starter - The essential guide to modular development with OSGi for the serious application developer.|http://www.packtpub.com/open-services-gateway-initiative-starter/book]
 * [OSGi in Action|http://www.manning.com/hall/]
