--- a/src/main/webapp/index/developers/building.page
+++ b/src/main/webapp/index/developers/building.page
@@ -25,7 +25,7 @@ Karaf 2.1.x and Karaf 2.2.x:
 Karaf 3.0.0 and later:
 * Download and [install Maven 3.0.3|http://maven.apache.org/download.html]
 * Get the latest [Source]
-* Java 1.6
+* Java 1.6 (1.7 recommended)
 
 *Optional:*
 * [Prince|http://www.princexml.com/download/] should be in the executable PATH to generate the PDF documentation
