--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -8,11 +8,11 @@ h1. Documentation
 
 h2. Karaf 3.0.x manual
 
-* [Karaf 3.0.0.RC1 Manual|http://karaf.apache.org/manual/latest/index.html]
+* [Karaf 3.0.0 Manual|http://karaf.apache.org/manual/latest/index.html]
 
 h2. Karaf 2.3.x manual
 
-* [Karaf 2.3.1 Manual|http://karaf.apache.org/manual/latest-2.3.x/index.html]
+* [Karaf 2.3.3 Manual|http://karaf.apache.org/manual/latest-2.3.x/index.html]
 
 h2. Karaf 2.2.x manual
 
