--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -18,11 +18,11 @@ h2. Latest Releases
 
 Grab these releases while they are hot!
 
-Technology Preview of Apache Karaf 3.0.x is [Karaf 3.0.0.RC1|download/karaf-3.0.0.RC1-release.html]
+The latest 3.0.x release is [Karaf 3.0.0|download/karaf-3.0.0-release.html].
 The latest 2.3.x release is [Karaf 2.3.3 Release|download/karaf-2.3.3-release.html].
 
 Releases:
-* [#Karaf 3.0.0.RC1]
+* [#Karaf 3.0.0]
 * [#Karaf 2.3.3]
 
 {div}
@@ -35,26 +35,26 @@ h2. Getting the latest distributions
 The above URLs use the Apache Mirror system to redirect you to a suitable mirror for your download. Some users have experienced issues with some versions of browsers (e.g. some Safari browsers). If the download doesn't seem to work for you from the above URL then try using [Mozilla Firefox|http://www.mozilla.com/en-US/firefox/]
 {info}
 
-h2. Karaf 3.0.0.RC1 (Technology Preview)
+h2. Karaf 3.0.0
 
-[Release Notes|download/karaf-3.0.0.RC1-release.html]
+[Release Notes|download/karaf-3.0.0-release.html]
 
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-3.0.0.RC1.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.0.RC1.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0.RC1-apache-karaf-3.0.0.RC1.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-3.0.0.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0/apache-karaf-3.0.0.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.0.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0/apache-karaf-3.0.0.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0-apache-karaf-3.0.0.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-3.0.0.RC1-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.0.RC1-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0.RC1/apache-karaf-3.0.0.RC1-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-3.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0/apache-karaf-3.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.0/apache-karaf-3.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.0/apache-karaf-3.0.0-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
-|HTML Manual| [manual-3.0.0.RC1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0.RC1/manual-3.0.0.RC1.html] |
-|PDF Manual| [manual-3.0.0.RC1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0.RC1/manual-3.0.0.RC1.pdf] |
+|HTML Manual| [manual-3.0.0.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0/manual-3.0.0.html] |
+|PDF Manual| [manual-3.0.0.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0/manual-3.0.0.pdf] |
 
 
 h2. Karaf 2.3.3
