[KARAF-378] Apache Karaf 3.0.0 Release
 Update news section of website.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1553316 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,7 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
-
+{include:news-2013-12-24}
 {include:news-2013-10-14}
 {include:news-2013-09-20}
 {include:news-2013-07-10}
