Add David in the team page of the website
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1553354 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -10,6 +10,7 @@ h3. Committers
 
 || Name || ID || PMC || Organisation ||
 | Filippo Balicchia | fbalicchia | | [Energeya|http://www.energeya.com/]  |
+| David Bosschaert | davidb | | |
 | [Ioannis Canellos|http://iocanel.blogspot.com] | iocanel | !/images/check.gif! | [FuseSource|http://fusesource.com/]  |
 | Hiram Chirino    | chirino | | [FuseSource|http://fusesource.com/] |
 | Chris Custine    | ccustine | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
