--- a/src/main/webapp/index/community/download/karaf-3.0.0-release.page
+++ b/src/main/webapp/index/community/download/karaf-3.0.0-release.page
@@ -10,9 +10,14 @@ Download links can be found in the [Download|/index/community/download.html] pag
 
 h2. Documentation
 
-- Manual ([HTML|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0/manual-3.0.0.html]|[PDF|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0/manual-3.0.0.pdf])
--- Users Guide ([HTML|http://karaf.apache.org/manual/3.0.0/users-guide/index.html])
--- Developers Guide ([HTML|http://karaf.apache.org/manual/3.0.0/developers-guide/index.html])
+- [Overview|http://karaf.apache.org/manual/latest/overview.html]
+- [Quickstart|http://karaf.apache.org/manual/latest/quick-start.html]
+- [Update notes|http://karaf.apache.org/manual/latest/update-notes.html]
+- [Dependencies Matrix|http://karaf.apache.org/index/documentation/karaf-dependencies/karaf-deps-3.0.x.html]
+- [Manual|http://karaf.apache.org/manual/latest/index.html]
+-- [User Guide|http://karaf.apache.org/manual/latest/users-guide/index.html]
+-- [Developer Guide|http://karaf.apache.org/manual/latest/developers-guide/index.html]
+-- [Commands reference|http://karaf.apache.org/manual/latest/commands/commands.html]
 
 h2. Release Notes - Karaf - Version 3.0.0
 
