--- a/src/main/webapp/index/community/news/news-2014-01-21.page
+++ b/src/main/webapp/index/community/news/news-2014-01-21.page
@@ -1,10 +1,11 @@
 ---
-title: Cave
-page_version: 2
+page_version: 1
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
-h2. Karaf Cave
+h1. Jean-Baptiste Onofré posted on January 21, 2014\\Karaf Cave 2.3.0 released!
+
+The Karaf team is pleased to announce the availability of [Karaf Cave 2.3.0|index/subprojects/cave/download/karaf-cave-2.3.0-release.html].
 
 Karaf Cave provides an OSGi Bundle Repository (OBR), simple Maven repository, and Karaf Features Repository (KFR).
 
@@ -21,13 +22,4 @@ Apache Karaf Cave provides the following features:
 - "External" repository proxy: you can proxy an existing repository (like a Maven one) into a Cave repository. In that case, the artifacts are still resident on the proxied repository, Cave handles the OBR metadata. Cave supports file: and http: like URL, it means that Cave is able to browse a remote HTTP Maven repository.
 - "External" repository population: you can populate your local Cave repository from an external repository.  It means that Cave browse the external repository URL (file: or http:), looking for OSGi bundles in the artifacts, and copy the bundles in the Cave repository storage.
 
-h2. Quick Start
-
-To install and start Cave into a running Karaf instance, you have to install the Cave server feature:
-
-{code}
-karaf@root> features:addurl mvn:org.apache.karaf.cave/apache-karaf-cave/2.3.0/xml/features
-karaf@root> features:install cave-server
-{code}
-
-You're ready to use Cave server. Take a look on the user guide.
+For more information, please see the [release notes|index/subprojects/cave/download/karaf-cave-2.3.0-release.html].
