[KARAF-2677] Release Apache Karaf 2.3.4
Update website.



git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1569166 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,8 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2014-02-17}
+{include:news-2014-01-21}
 {include:news-2013-12-24}
 {include:news-2013-10-14}
 {include:news-2013-09-20}
