--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -30,6 +30,28 @@ h3. Manual
 |PDF Manual| [manual-3.0.0.RC1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0.RC1/manual-3.0.0.RC1.pdf] |
 
 
+h2. Karaf 2.3.3^M
+^M
+[Release Notes|download/karaf-2.3.3-release.html]^M
+^M
+h3. Binary Distribution^M
+^M
+||Description||Download Link|| || || ||^M
+|Windows Distribution| [apache-karaf-2.3.3.zip|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.zip.md5]|^M
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.3.tar.gz|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.3-apache-karaf-2.3.3.tar.gz.md5]|^M
+^M
+h3. Source Distribution^M
+^M
+||Description||Download Link|| || || ||^M
+|Windows Source Distribution| [apache-karaf-2.3.3-src.zip|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.zip.md5]|^M
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.3-src.tar.gz|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.3.3/apache-karaf-2.3.3-src.tar.gz.md5]|^M
+^M
+h3. Manual^M
+||Description||Download Link||^M
+|HTML Manual| [manual-2.3.3.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.3/manual-2.3.3.html] |^M
+|PDF Manual| [manual-2.3.3.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.3.3/manual-2.3.3.pdf] |^M
+
+
 h2. Karaf 2.3.2
 
 [Release Notes| download/karaf-2.3.2-release.html]
