Fix links in Cave and EIK subprojects pages
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1571589 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/subprojects/cave/cave-building.page
+++ b/src/main/webapp/index/subprojects/cave/cave-building.page
@@ -12,7 +12,7 @@ h3. Prequisites
 
 *Required:*
 * Download and [install Maven 3.0.x|http://maven.apache.org/download.html]
-* Get the latest [Source|/subproject/cave/source.html] 
+* Get the latest [Source|/index/subprojects/cave/cave-source.html] 
 * Java 1.7
 
 h3. A normal build
