--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -6,6 +6,7 @@ page_modifier: jbonofre
 --- pipeline:conf
 h2. Articles on Apache Karaf
 
+* [Apache Karaf, Cellar, Camel, ActiveMQ monitoring with ELK (ElasticSearch, Logstash, and Kibana)|http://blog.nanthrax.net/2014/03/apache-karaf-cellar-camel-activemq-monitoring-with-elk-elasticsearch-logstash-and-kibana/]
 * [Coming in Karaf 3.0.0: new enterprise JPA (OpenJPA, Hibernate) and CDI (OpenWebBeans, JBoss Weld) features|http://blog.nanthrax.net/2013/12/coming-in-karaf-3-0-0-new-enterprise-jpa-openjpa-hibernate-and-cdi-openwebbeans-jboss-weld-features/]
 * [Coming in Karaf 3.0.0: new enterprise JDBC feature|http://blog.nanthrax.net/2013/12/coming-in-karaf-3-0-0-new-enterprise-jdbc-feature/]
 * [Coming in Karaf 3.0.0: new enterprise JNDI feature|http://blog.nanthrax.net/2013/12/coming-in-karaf-3-0-0-new-enterprise-jndi-feature/]
